# aoc

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
py/: day2303.py
src/: day1501.rs  day1502.rs  day1503.rs  day1504.rs  day1505.rs  day1506.rs  day1507.rs  day2201.rs  day2202.rs  day2203.rs  day2204.rs  day2205.rs  day2206.rs  day2207.rs  day2208.rs  day2209.rs  day2210.rs  day2211.rs  day2212.rs  day2213.rs  day2214.rs  day2215.rs  day2216.rs  day2217.rs  day2218.rs  day2219.rs  day2220.rs  day2221.rs  day2222.rs  day2223.rs  day2224.rs  day2225.rs  day2301.rs  day2302.rs  day2303.rs  day2304.rs  day2305.rs  day2306.rs  day2307.rs  day2308.rs  (+19 more)
