[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
concat-idents = "1.1.5"
derive_more = "0.99.17"
dyn-iter = "1.0.1"
hex-literal = "0.4.1"
itertools = "0.12.0"
md5 = "0.7.0"
ndarray = "0.15.6"
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
test-case = "3.3.1"
winnow = "0.5.28"
